[tool.poetry]
name = "cs229-2018-autumn"
version = "0.1.0"
description = ""
authors = ["moonymoonee <moonymoonee@cupist.com>"]
readme = "README.md"
packages = [{include = "cs229_2018_autumn"}]

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.8.2"
autoflake = "^2.2.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

POETRY_VIRTUALENVS_IN_PROJECT = true